--- a/core/templates/core/novedades.html
+++ b/core/templates/core/novedades.html
@@ -50,25 +50,26 @@
   <div class="row">
      
     <div class="column">
-      <img src="imagenes/zapatillas1.jpg">
-      <img src="imagenes/zapatillas2.jpg">
-      <img src="imagenes/zapatillas3.jpg">
-      <img src="imagenes/zapatillas5.jpg">
-      <img src="imagenes/zapatillas6.jpg">
+    
+      <img src="{% static 'core/imagenes/zapatillas1.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas2.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas3.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas5.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas6.jpg' %}">
     </div>
     <div class="column">
-      <img src="imagenes/zapatillas5.jpg">
-      <img src="imagenes/zapatillas4.jpg">
-      <img src="imagenes/zapatillas2.jpg">
-      <img src="imagenes/zapatillas3.jpg">
-      <img src="imagenes/zapatillas1.jpg">
+      <img src="{% static 'core/imagenes/zapatillas5.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas4.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas3.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas2.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas1.jpg' %}">
     </div>
     <div class="column">
-      <img src="imagenes/zapatillas1.jpg">
-      <img src="imagenes/zapatillas2.jpg">
-      <img src="imagenes/zapatillas3.jpg">
-      <img src="imagenes/zapatillas5.jpg">
-      <img src="imagenes/zapatillas6.jpg">
+      <img src="{% static 'core/imagenes/zapatillas1.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas2.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas3.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas5.jpg' %}">
+      <img src="{% static 'core/imagenes/zapatillas6.jpg' %}">
     </div>
   </div>
 
